style dla 480px

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <a href="index.html" class="logo logo--black"
               ><span class="logo__web">Web</span>Studio</a
             >
-            <nav>
-              <!-- LOGO END -->
+            <!-- LOGO END -->
+            <nav class="mobile-hide">
               <ul class="list page-header__nav-list">
                 <li class="page-header__active-container">
                   <a href="index.html" class="page-header__nav-link page-header__is-active"
@@ -43,7 +43,7 @@
             </nav>
           </div>
           <!------- PUSTY DIV ??? ------->
-          <div>
+          <div class="mobile-hide">
             <ul class="list page-header__right-section">
               <li class="page-header__contact">
                 <a
@@ -198,7 +198,7 @@
           <ul class="list team__list">
             <li>
               <figure class="team__box">
-                <img src="images/team/John_Doe_1.jpg" alt="John Dow 1" width="270" height="260" />
+                <img src="images/team/John_Doe_1.jpg" alt="John Dow 1" class="team__img" />
                 <figcaption>
                   <p class="team__employe">John Doe</p>
                   <p class="team__job">Product Designer</p>
@@ -237,7 +237,7 @@
             </li>
             <li>
               <figure class="team__box">
-                <img src="images/team/John_Doe_2.jpg" alt="John Dow 2" width="270" height="260" />
+                <img src="images/team/John_Doe_2.jpg" alt="John Dow 2" class="team__img" />
                 <figcaption>
                   <p class="team__employe">John Doe</p>
                   <p class="team__job">Frontend Developer</p>
@@ -276,7 +276,7 @@
             </li>
             <li>
               <figure class="team__box">
-                <img src="images/team/John_Doe_3.jpg" alt="John Dow 3" width="270" height="260" />
+                <img src="images/team/John_Doe_3.jpg" alt="John Dow 3" class="team__img" />
                 <figcaption>
                   <p class="team__employe">John Doe</p>
                   <p class="team__job">Marketing</p>
@@ -315,7 +315,7 @@
             </li>
             <li>
               <figure class="team__box">
-                <img src="images/team/John_Doe_4.jpg" alt="John Dow 4" width="270" height="260" />
+                <img src="images/team/John_Doe_4.jpg" alt="John Dow 4" class="team__img" />
                 <figcaption>
                   <p class="team__employe">John Doe</p>
                   <p class="team__job">UI Designer</p>
@@ -410,7 +410,7 @@
 
     <footer class="footer">
       <div class="container footer__elements">
-        <div>
+        <div class="footer__info-center">
           <a href="index.html" class="logo logo--white"><span class="logo__web">Web</span>Studio</a>
           <address class="footer__address-info">
             m. Warszawa, Aleje Jerozolimskie 21<br />
