--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
         </svg>
       </button>
 
-      <ul class="mobile-menu">
+      <div class="mobile-menu">
         <div class="top-menu">
           <ul class="mobile__links">
             <li class="mobile__link">
@@ -600,7 +600,7 @@
             <li class="mobile__social"><a href="#" class="mobile__social-styles"></a>LinkedIn</li>
           </ul>
         </div>
-      </ul>
+      </div>
     </div>
 
     <script
