--- a/index.html
+++ b/index.html
@@ -476,8 +476,8 @@
       <div class="modal__box">
         <button class="modal__close-button" data-modal-close></button>
         <h4 class="modal__title">Zostaw swoje dane w formularzu poniżej</h4>
-        <div class="modal__form-container">
-          <form name="signup-form">
+        <div>
+          <form name="signup-form" class="modal__form-container">
             <div class="modal__form">
               <label for="form-name" class="modal__label-style">Imie</label>
               <div class="modal__form-icon-container">
