--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
       <section class="advantages">
         <div class="container">
           <ul class="list advantages__list">
-            <li>
+            <li class="advantages__element">
               <div class="advantages__icon-background">
                 <svg width="70" height="70">
                   <use href="images/icons.svg#icon-antenna"></use>
@@ -109,7 +109,7 @@
                 sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li>
+            <li class="advantages__element">
               <div class="advantages__icon-background">
                 <svg width="70" height="70">
                   <use href="images/icons.svg#icon-clock"></use>
@@ -121,7 +121,7 @@
                 sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li>
+            <li class="advantages__element">
               <div class="advantages__icon-background">
                 <svg width="70" height="70">
                   <use href="images/icons.svg#icon-diagram"></use>
@@ -133,7 +133,7 @@
                 sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li>
+            <li class="advantages__element">
               <div class="advantages__icon-background">
                 <svg width="70" height="70">
                   <use href="images/icons.svg#icon-astronaut"></use>
@@ -186,7 +186,7 @@
         <div class="container">
           <h2 class="heading">Nasz zespół</h2>
           <ul class="list team__list">
-            <li>
+            <li class="team_labels">
               <figure class="team__box">
                 <img src="images/team/John_Doe_1.jpg" alt="John Dow 1" class="team__img" />
                 <figcaption>
@@ -225,7 +225,7 @@
                 </figcaption>
               </figure>
             </li>
-            <li>
+            <li class="team_labels">
               <figure class="team__box">
                 <img src="images/team/John_Doe_2.jpg" alt="John Dow 2" class="team__img" />
                 <figcaption>
@@ -264,7 +264,7 @@
                 </figcaption>
               </figure>
             </li>
-            <li>
+            <li class="team_labels">
               <figure class="team__box">
                 <img src="images/team/John_Doe_3.jpg" alt="John Dow 3" class="team__img" />
                 <figcaption>
@@ -303,7 +303,7 @@
                 </figcaption>
               </figure>
             </li>
-            <li>
+            <li class="team_labels">
               <figure class="team__box">
                 <img src="images/team/John_Doe_4.jpg" alt="John Dow 4" class="team__img" />
                 <figcaption>
@@ -555,7 +555,7 @@
     </div>
 
     <div class="menu-container js-menu-container" id="mobile-menu">
-      <button class="menu-toggle js-close-menu">
+      <button class="menu-toggle-close js-close-menu">
         <svg
           fill="currentColor"
           viewBox="0 0 20 20"
