dodano responsywne zdjęcia John Dow

--- a/index.html
+++ b/index.html
@@ -188,7 +188,21 @@
           <ul class="list team__list">
             <li class="team_labels">
               <figure class="team__box">
-                <img src="images/team/John_Doe_1.jpg" alt="John Dow 1" class="team__img" />
+                <!-- <img src="images/team/John_Doe_1.jpg" alt="John Dow 1" class="team__img" /> -->
+                <img
+                  src="images/team/John1_desktop@1x.jpg"
+                  srcset="
+                    images/team/John1_desktop@1x.jpg 270w,
+                    images/team/John1_desktop@2x.jpg 540w,
+                    images/team/John1_tablet@1x.jpg  354w,
+                    images/team/John1_tablet@2x.jpg  708w,
+                    images/team/John1_mobile@1x.jpg  450w,
+                    images/team/John1_mobile@2x.jpg  980w
+                  "
+                  sizes="(min-width: 1200px) 270px, (min-width: 769px) 354px, (min-width: 480px) 450px, 90vw"
+                  alt="John Dow 1"
+                  class="team__img"
+                />
                 <figcaption>
                   <p class="team__employe">John Doe</p>
                   <p class="team__job">Product Designer</p>
@@ -227,7 +241,21 @@
             </li>
             <li class="team_labels">
               <figure class="team__box">
-                <img src="images/team/John_Doe_2.jpg" alt="John Dow 2" class="team__img" />
+                <!-- <img src="images/team/John_Doe_2.jpg" alt="John Dow 2" class="team__img" /> -->
+                <img
+                  src="images/team/John2_desktop@1x.jpg"
+                  srcset="
+                    images/team/John2_desktop@1x.jpg 270w,
+                    images/team/John2_desktop@2x.jpg 540w,
+                    images/team/John2_tablet@1x.jpg  354w,
+                    images/team/John2_tablet@2x.jpg  708w,
+                    images/team/John2_mobile@1x.jpg  450w,
+                    images/team/John2_mobile@2x.jpg  980w
+                  "
+                  sizes="(min-width: 1200px) 270px, (min-width: 769px) 354px, (min-width: 480px) 450px, 90vw"
+                  alt="John Dow 1"
+                  class="team__img"
+                />
                 <figcaption>
                   <p class="team__employe">John Doe</p>
                   <p class="team__job">Frontend Developer</p>
@@ -266,7 +294,22 @@
             </li>
             <li class="team_labels">
               <figure class="team__box">
-                <img src="images/team/John_Doe_3.jpg" alt="John Dow 3" class="team__img" />
+                <!-- <img src="images/team/John_Doe_3.jpg" alt="John Dow 3" class="team__img" /> -->
+
+                <img
+                  src="images/team/John3_desktop@1x.jpg"
+                  srcset="
+                    images/team/John3_desktop@1x.jpg 270w,
+                    images/team/John3_desktop@2x.jpg 540w,
+                    images/team/John3_tablet@1x.jpg  354w,
+                    images/team/John3_tablet@2x.jpg  708w,
+                    images/team/John3_mobile@1x.jpg  450w,
+                    images/team/John3_mobile@2x.jpg  980w
+                  "
+                  sizes="(min-width: 1200px) 270px, (min-width: 769px) 354px, (min-width: 480px) 450px, 90vw"
+                  alt="John Dow 1"
+                  class="team__img"
+                />
                 <figcaption>
                   <p class="team__employe">John Doe</p>
                   <p class="team__job">Marketing</p>
@@ -305,7 +348,21 @@
             </li>
             <li class="team_labels">
               <figure class="team__box">
-                <img src="images/team/John_Doe_4.jpg" alt="John Dow 4" class="team__img" />
+                <!-- <img src="images/team/John_Doe_4.jpg" alt="John Dow 4" class="team__img" /> -->
+                <img
+                  src="images/team/John4_desktop@1x.jpg"
+                  srcset="
+                    images/team/John4_desktop@1x.jpg 270w,
+                    images/team/John4_desktop@2x.jpg 540w,
+                    images/team/John4_tablet@1x.jpg  354w,
+                    images/team/John4_tablet@2x.jpg  708w,
+                    images/team/John4_mobile@1x.jpg  450w,
+                    images/team/John4_mobile@2x.jpg  980w
+                  "
+                  sizes="(min-width: 1200px) 270px, (min-width: 769px) 354px, (min-width: 480px) 450px, 90vw"
+                  alt="John Dow 1"
+                  class="team__img"
+                />
                 <figcaption>
                   <p class="team__employe">John Doe</p>
                   <p class="team__job">UI Designer</p>
