poprawka podkreślenia w portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,12 +32,14 @@
             <!-- LOGO END -->
             <nav class="mobile-hide">
               <ul class="list page-header__nav-list">
+                <li>
+                  <a href="index.html" class="page-header__nav-link">Agencja</a>
+                </li>
                 <li class="page-header__active-container">
-                  <a href="index.html" class="page-header__nav-link page-header__is-active"
-                    >Agencja</a
+                  <a href="portfolio.html" class="page-header__nav-link page-header__is-active"
+                    >Portfolio</a
                   >
                 </li>
-                <li><a href="portfolio.html" class="page-header__nav-link">Portfolio</a></li>
                 <li><a href="#" class="page-header__nav-link">Kontakt</a></li>
               </ul>
             </nav>
